refactor for Null-Safety & add somes javadoc